--- a/Report/report.tex
+++ b/Report/report.tex
@@ -142,6 +142,10 @@ Para realização deste método, iremos apresentar passo a passo, a implementaç
 
   \item \textbf{Casos de teste}\\
  \quad Para cada caminho executável iremos apresentar os casos de usos, com o input e o output desejado.
+ O input são várias variáveis, o \textit{numVertices} corresponde ao número de vértices que estão presentes no grafo, o \textit{graph} é o grafo que foi criado com o número de vértices anteriormente apresentada. E o \textit{distance} é o que vai conter o output da função chamada que tem como parâmetros o grafo e o vértice de origem para calcular as distâncias.\\
+
+ O output é um array bi-dimensional que contém as distâncias entre o vértice origem com todos o outros vértices que estão presentes no grafo anteriormente criado.\\
+
 
 \begin{table}[H]
     \centering
@@ -194,7 +198,7 @@ Para realização deste método, iremos apresentar passo a passo, a implementaç
     \caption{Casos de teste para os caminhos independentes do Dijkstra.}
     \label{tab:tabela_exemplo}
 \end{table}
-
+\clearpage
 
   
   
@@ -223,53 +227,134 @@ Para realização deste método, iremos apresentar passo a passo, a implementaç
     Portanto a complexidade ciclomática é de 6 + 1 = 7. O que implica que existem no máximo 7 caminhos independentes.
     
     \item \textbf{Caminhos linearmente independentes}
-    \item \textbf{Casos de teste}
+    Testar caminhos linearmente independentes é importante para garantir uma cobertura abrangente do código.
+
+  Os próximos pontos são os 6 caminhos independentes que encontramos para o código Solve do código Sudoku.
+  \begin{itemize}
+    \item \textbf{P1} = {Start, 2, 3, 5, 8, End}
+    \item \textbf{P2} = {Start, 2, 3, 4, 5, 7, 10, 5, 6, 3, 8, End}
+    \item \textbf{P3} = {Start, 2, 3, 4, 5, 7, 9, 11, 14, 15, 16, 17, End} 
+    \item \textbf{P4} = {Start, 2, 3, 4, 5, 7, 9, 11, 14, 13, 11, 12, End}
+    \item \textbf{P5} = {Start, 2, 3, 4, 5, 7, 9, 11, 14, 13, 11, 14, 15, 16, 18, 13, 11, 14, 13, 11, 12, End}
+   \item \textbf{P6} = {Start, 2, 3, 4, 5, 7, 10, 5, 6, 3, 4, 5, 7, 10, 5, 7, 9, 11, 14, 13, 11, 14, 15, 16, 17, End}
+    \end{itemize}
     
+  Destes 6 caminhos linearmente independentes, 1 deles não é executáveis, o \textbf{P1}.
+
+  \quad Apresentamos agora as razões pelas quais estes não são executáveis são as seguintes: \\
+  \begin{itemize}
+    \item \textbf{P1} = Neste caso, não encontramos nenhum caso de teste para realização deste caminho, visto que a variável \textbf{i} é inicializada por 0, e a condição seguinte é sempre verdadeira, o que torna assim um caminho \textbf{unfeasable}.
+
+  \end{itemize}
+    \item \textbf{Casos de teste}\\
+    \quad Para cada caminho executável iremos apresentar os casos de usos, com o input e o output
+desejado.
+\quad Apresentamos o número do caminho linearmente independente, com o input neste caso o input é o conteúdo da variável \textbf{board} do código que foi submetido do Sudoku, o output é o resultado esperado. Sendo que sempre que existe uma solução este algoritmo altera o board, mas se não encontrar nenhuma solução este irá apresentar o mesmo board que foi submetido.
 \begin{table}[H]
     \centering
     \begin{tabular}{|c|p{7cm}|p{3cm}|} % Ajusta a largura da coluna "Input" para 5cm
     \hline
-    \textbf{Caminho} & \textbf{Input} & \textbf{Output Esperado} \\
+    \renewcommand{\arraystretch}{1.8}
+    \textbf{Caminho} & \textbf{Input - Este input é correspondente à variável board.} & \textbf{Output Esperado} \\
                         
     \hline
-    \textbf{P3} & int numVertices = 1; \newline
-                Graph graph = new Graph(numVertices); \newline
-                int[][] distance = dijkstra(graph, 1); & 0 - 2147483647  \\
+    \textbf{P2} &   
+        {'5', '3', '4', '6', '7', '8', '9', '1', '2'},\newline
+        {'6', '7', '2', '1', '9', '5', '3', '4', '8'},\newline
+        {'1', '9', '8', '3', '4', '2', '5', '6', '7'},\newline
+        {'8', '5', '9', '7', '6', '1', '4', '2', '3'},\newline
+        {'4', '2', '6', '8', '5', '3', '7', '9', '1'},\newline
+        {'7', '1', '3', '9', '2', '4', '8', '5', '6'},\newline
+        {'9', '6', '1', '5', '3', '7', '2', '8', '4'},\newline
+        {'2', '8', '7', '4', '1', '9', '6', '3', '5'},\newline
+        {'3', '4', '5', '2', '8', '6', '1', '7', '9'}; & 
+    5 3 4 6 7 8 9 1 2 \newline
+    6 7 2 1 9 5 3 4 8 \newline
+    1 9 8 3 4 2 5 6 7 \newline
+    8 5 9 7 6 1 4 2 3 \newline
+    4 2 6 8 5 3 7 9 1 \newline
+    7 1 3 9 2 4 8 5 6 \newline
+    9 6 1 5 3 7 2 8 4 \newline
+    2 8 7 4 1 9 6 3 5 \newline
+    3 4 5 2 8 6 1 7 9   \\
     \hline
-    \textbf{P4} & int numVertices = 1;\newline
-    Graph graph = new Graph(numVertices);\newline
-    int[][] distance = dijkstra(graph, 0); & 0 - 0 \\
+    \textbf{P3} & 
+        {'.', '.', '.', '.', '.', '.', '.', '.', '.'},\newline
+        {'.', '.', '.', '.', '.', '.', '.', '.', '.'},\newline
+        {'.', '.', '.', '.', '.', '.', '.', '.', '.'},\newline
+        {'.', '.', '.', '.', '.', '.', '.', '.', '.'},\newline
+        {'.', '.', '.', '.', '.', '.', '.', '.', '.'},\newline
+        {'.', '.', '.', '.', '.', '.', '.', '.', '.'},\newline
+        {'.', '.', '.', '.', '.', '.', '.', '.', '.'},\newline
+        {'.', '.', '.', '.', '.', '.', '.', '.', '.'},\newline
+        {'.', '.', '.', '.', '.', '.', '.', '.', '.'}; & 1 2 3 4 5 6 7 8 9\newline
+    4 5 6 7 8 9 1 2 3\newline
+    7 8 9 1 2 3 4 5 6\newline
+    2 1 4 3 6 5 8 9 7\newline
+    3 6 5 8 9 7 2 1 4 \newline
+    8 9 7 2 1 4 3 6 5\newline
+    5 3 1 6 4 2 9 7 8\newline
+    6 4 2 9 7 8 5 3 1\newline
+    9 7 8 5 3 1 6 4 2 \\
     \hline
-    \textbf{P5} & int numVertices = 5;\newline
-    Graph graph = new Graph(numVertices);\newline
-    graph.addEdge(1,2,1);\newline
-    graph.addEdge(2,4,5);\newline
-    graph.addEdge(2,3,10);\newline
-    graph.addEdge(3,4,3);\newline
-    int[][] distance = dijkstra(graph, 0); & 0 - 0\newline
-    1 - 2147483647\newline
-    2 - 2147483647\newline
-    3 - 2147483647\newline
-    4 - 2147483647   \\
+    \textbf{P4} &  
+        {'.', '3', '4', '5', '7', '8', '9', '1', '2'},\newline
+        {'6', '7', '2', '1', '9', '5', '3', '4', '8'},\newline
+        {'1', '9', '8', '3', '4', '2', '5', '6', '7'},\newline
+        {'8', '5', '9', '7', '6', '1', '4', '2', '3'},\newline
+        {'4', '2', '6', '8', '5', '3', '7', '9', '1'},\newline
+        {'7', '1', '3', '9', '2', '4', '8', '5', '6'},\newline
+        {'9', '6', '1', '5', '3', '7', '2', '8', '4'},\newline
+        {'2', '8', '7', '4', '1', '9', '6', '3', '5'},\newline
+        {'3', '4', '5', '2', '8', '6', '1', '7', '9'}; & 
+        . 3 4 5 7 8 9 1 2 \newline
+        6 7 2 1 9 5 3 4 8 \newline
+        1 9 8 3 4 2 5 6 7 \newline
+        8 5 9 7 6 1 4 2 3 \newline
+        4 2 6 8 5 3 7 9 1 \newline
+        7 1 3 9 2 4 8 5 6 \newline
+        9 6 1 5 3 7 2 8 4 \newline
+        2 8 7 4 1 9 6 3 5 \newline
+        3 4 5 2 8 6 1 7 9   \\
+\hline
+   
+    \textbf{P5} & 
+        {'.', '.', '4', '6', '7', '8', '9', '1', '2'},\newline
+        {'.', '7', '2', '1', '9', '5', '3', '4', '8'},\newline
+        {'1', '9', '8', '3', '4', '.', '5', '6', '7'},\newline
+        {'8', '5', '.', '7', '6', '1', '4', '2', '3'},\newline
+        {'2', '2', '6', '8', '5', '3', '.', '.', '1'},\newline
+        {'7', '1', '3', '9', '2', '4', '8', '5', '6'},\newline
+        {'9', '.', '1', '.', '3', '.', '2', '8', '4'},\newline
+        {'.', '8', '7', '4', '1', '9', '6', '3', '5'},\newline
+        {'3', '4', '5', '2', '.', '6', '1', '7', '9'}; & . . 4 6 7 8 9 1 2 \newline
+    . 7 2 1 9 5 3 4 8 \newline
+    1 9 8 3 4 . 5 6 7 \newline
+    8 5 . 7 6 1 4 2 3 \newline
+    2 2 6 8 5 3 . . 1 \newline
+    7 1 3 9 2 4 8 5 6 \newline
+    9 . 1 . 3 . 2 8 4 \newline
+    . 8 7 4 1 9 6 3 5 \newline
+    3 4 5 2 . 6 1 7 9 \\
     \hline
-    \textbf{P6} & int numVertices = 2;\newline
-    Graph graph = new Graph(numVertices);\newline
-    graph.addEdge(0, 1, Integer.MAX\_VALUE); \newline
-    int[][] distance = dijkstra(graph, 0); & 0 - 0\newline
-    1 - 2147483647 \\
-    \hline
-    \textbf{P6} & int numVertices = 5;\newline
-    Graph graph = new Graph(numVertices);\newline
-    graph.addEdge(0,2,1);\newline
-    graph.addEdge(0,1,10);\newline
-    graph.addEdge(2,4,5);\newline
-    graph.addEdge(2,3,10);\newline
-    graph.addEdge(3,4,3);\newline
-    int[][] distance = dijkstra(graph, 0); & 0 - 0\newline
-    1 - 10\newline
-    2 - 1\newline
-    3 - 11\newline
-    4 - 6 \\
+    \textbf{P6} & 
+        {'5', '3', '4', '6', '7', '8', '9', '1', '2'},\newline
+        {'6', '7', '2', '1', '9', '5', '3', '4', '8'},\newline
+        {'1', '9', '8', '3', '4', '2', '5', '6', '7'},\newline
+        {'8', '5', '9', '7', '6', '1', '4', '2', '3'},\newline
+        {'4', '2', '6', '8', '5', '3', '7', '9', '1'},\newline
+        {'7', '1', '3', '9', '2', '4', '8', '5', '6'},\newline
+        {'9', '6', '1', '5', '3', '7', '2', '8', '4'},\newline
+        {'2', '8', '7', '4', '1', '9', '6', '3', '5'},\newline
+        {'3', '4', '5', '2', '8', '6', '1', '7', '.'}; &5 3 4 6 7 8 9 1 2 \newline
+    6 7 2 1 9 5 3 4 8\newline
+    1 9 8 3 4 2 5 6 7\newline
+    8 5 9 7 6 1 4 2 3\newline
+    4 2 6 8 5 3 7 9 1\newline
+    7 1 3 9 2 4 8 5 6\newline
+    9 6 1 5 3 7 2 8 4\newline
+    2 8 7 4 1 9 6 3 5\newline
+    3 4 5 2 8 6 1 7 9\\
     \hline
    
     \end{tabular}
@@ -282,6 +367,19 @@ Para realização deste método, iremos apresentar passo a passo, a implementaç
 \end{itemize}
 \subsubsection{Data Flow}
 
+O teste de Data flow é uma técnica de teste de white box que examina o fluxo de dados em relação às variáveis usadas no código.\\
+É o processo de coleta de informações sobre como as variáveis fluem os dados no programa. Ele tenta obter informações específicas de cada ponto específico no processo. O teste de fluo de dados tem um grupo de estratégias de teste para examinar o fluxo de controlo de programas, a fim de explorar a sequência de variáveis de acordo com a sequência de eventos. Ele se concentra principalmente nos pontos em que os valores são atribuídos às váriaves e o ponto em que estes são usados.\\
+\textbf{Vantagem:}\\
+O teste de fluxo de dados é usado para encontrar os seguintes problemas:\\
+\begin{itemize}
+    \item Encontrar uma variável usada, mas nunca definida.
+    \item Encontrar uma variável definida, mas nunca usada.
+    \item Encontrar uma variável definida várias vezes antes de ser usada.
+\end{itemize}
+
+\textbf{Desvantagem:}
+O processo é demorado.\\
+Existem vários tipos de teste de fluxo de dados, tais como All def, All use, All-Du-Paths, sendo que este último é o tipo de teste que iremo-nos focar mais, pois esta técnica apesar de ser mais complexa, é a melhor pois analisa todos os caminhos possíveis de uma definição de variáveis.
 
 \section{Critérios de Pass/Fail}
 
@@ -297,7 +395,7 @@ Para realização deste método, iremos apresentar passo a passo, a implementaç
 
 Sendo que ao longo do desenvolvimento, fomos nos ajudando um ao outro, realizando o debate dos planos de tstes, a implementação do caminhos, a realização do data flow, e por fim, realizamos o relatório ao mesmo tempo. 
 
-\section{Relatoório de Conclusão dos Testes}
+\section{Relatório de Conclusão dos Testes}
 
 
 
