--- a/Report/report.tex
+++ b/Report/report.tex
@@ -1256,7 +1256,7 @@ Nesta tabela, temos 2 inputs para cada teste, visto que para que o data flow fos
 \end{table}
 
 \subsection{Análise de resultados}
-Após visualização das tabelas podemos tirar boas conclusões, apartindo dos critérios apresentados na secção 6, ambos os softwares passam com 100\% de sucesso.
+\texttt{}\par Após visualização das tabelas podemos tirar boas conclusões, apartindo dos critérios apresentados na secção 6, ambos os softwares passam com 100\% de sucesso.
 
 Todos os outputs recebidos eram os outputs esperados.
 
@@ -1265,7 +1265,7 @@ Analisamos e verificamos se com todos os testes realmente passavam pelos nós, e
 Os resultados obtidos nos testes unitários do DataFlow eram já esperados, visto que os testes são exatamente iguais aos do control flow.
 
 \section{Conclusão}
-\quad Durante este projeto, exploramos as técnicas de controlo de fluxo e fluxo de dados nos nossos testes unitários, focando especificamente na função \textit{Dijkstra} e \textit{Solve}. 
+\texttt{}\par Durante este projeto, exploramos as técnicas de controlo de fluxo e fluxo de dados nos nossos testes unitários, focando especificamente na função \textit{Dijkstra} e \textit{Solve}. 
 
 Ao aplicar o controlo de fluxo, pudemos examinar meticulosamente o comportamento do algoritmo em diferentes caminhos de execução, identificando áreas de código que exigiam atenção especial e garantindo uma cobertura abrangente dos casos de teste.
 
